// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > continuation with an emoji-only message 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC sc-jefFLK bLegUT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww sc-ihILfL uNykA"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cAiakp sc-fvpurI dqiesn iMDhTG"
    >
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW lpjSeN"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW lpjSeN"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW lpjSeN"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > continuation with plain text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC sc-jefFLK bLegUT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww sc-ihILfL uNykA"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cAiakp sc-fvpurI dqiesn iMDhTG"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header whose text mentions the self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn eptHSR sc-jnrVmt hSvgtw"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-kjOPSs JMPrY"
    >
      <div
        class="sc-lkgRtK fKnbdb sc-bXdOnr lmMEAo"
      >
        <div
          class="sc-gsNiZj ihrxfp sc-jlRLdN bcFsUr"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
      <div
        class="sc-fotPuT jrxelZ sc-eySzLJ bdaNuj"
        tabindex="0"
      >
        <span
          class="sc-cTAITq gzCjrQ"
        >
          <i
            aria-hidden="true"
            class="sc-cfJLes cHTqvR"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-cfJLes cHTqvR"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-cAiakp sc-fvpurI dqiesn iMDhTG"
    >
      Hey
       
      <span
        class="sc-avgGE hhYORm sc-gqtqYm jriqyv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header with a message-link chip 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC sc-jnrVmt hSvgtw"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-kjOPSs JMPrY"
    >
      <div
        class="sc-lkgRtK fKnbdb sc-bXdOnr lmMEAo"
      >
        <div
          class="sc-gsNiZj ihrxfp sc-jlRLdN bcFsUr"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
      <div
        class="sc-fotPuT jrxelZ sc-eySzLJ bdaNuj"
        tabindex="0"
      >
        <span
          class="sc-cTAITq gzCjrQ"
        >
          <i
            aria-hidden="true"
            class="sc-cfJLes cHTqvR"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-cfJLes cHTqvR"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-cAiakp sc-fvpurI dqiesn iMDhTG"
    >
      see this: 
      <a
        class="sc-fIISQZ btNXks"
        href="https://shieldbattery.net/chat/1/some-channel?m=9b2e8d0e-5f3a-4a2b-8c1d-6f5e4d3c2b1a"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        <span
          aria-hidden="true"
          class="sc-hiCkpJ dnvpxc sc-cRKKwI gAfWJn"
        >
          chat
        </span>
        <span
          aria-label="Channel name loading…"
          class="sc-knKKcV feAZpf"
        >
                     
        </span>
        <span
          class="sc-hoHvKZ cayZlc"
        >
          ›
        </span>
        <span
          class="sc-leSMyW fyGpbB"
        >
          message
        </span>
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > cozy layouts > header with plain text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC sc-jnrVmt hSvgtw"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      aria-hidden="true"
      class="sc-kjOPSs JMPrY"
    >
      <div
        class="sc-lkgRtK fKnbdb sc-bXdOnr lmMEAo"
      >
        <div
          class="sc-gsNiZj ihrxfp sc-jlRLdN bcFsUr"
        />
      </div>
    </div>
    <div>
      <span
        class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
        tabindex="0"
      >
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
      <div
        class="sc-fotPuT jrxelZ sc-eySzLJ bdaNuj"
        tabindex="0"
      >
        <span
          class="sc-cTAITq gzCjrQ"
        >
          <i
            aria-hidden="true"
            class="sc-cfJLes cHTqvR"
          >
             [
          </i>
          12:00 AM
          <i
            aria-hidden="true"
            class="sc-cfJLes cHTqvR"
          >
            ]
          </i>
        </span>
      </div>
    </div>
    <span
      class="sc-cAiakp sc-fvpurI dqiesn iMDhTG"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cfJLes cHTqvR"
    >
      : 
    </i>
    <span
      class="sc-cAiakp dqiesn"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cfJLes cHTqvR"
    >
      : 
    </i>
    <span
      class="sc-cAiakp dqiesn"
    >
      nice game 
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW cmyewe"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-bnOOOA bBuBpr"
    >
      * 
    </span>
    <span
      class="sc-avgGE hhYORm sc-gsFBvc sc-iKMXcJ dCMuSE UcIhF"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-cAiakp sc-gLDjOb dqiesn eYXeoN"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cfJLes cHTqvR"
    >
      : 
    </i>
    <span
      class="sc-cAiakp dqiesn"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cfJLes cHTqvR"
    >
      : 
    </i>
    <span
      class="sc-cAiakp dqiesn"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-avgGE hhYORm sc-gqtqYm jriqyv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cfJLes cHTqvR"
    >
      : 
    </i>
    <span
      class="sc-cAiakp dqiesn"
    >
      hey
       
      <span
        class="sc-avgGE hhYORm sc-gqtqYm jriqyv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-avgGE hhYORm sc-gqtqYm jriqyv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cfJLes cHTqvR"
    >
      : 
    </i>
    <span
      class="sc-cAiakp dqiesn"
    >
      hey
       
      <span
        class="sc-avgGE hhYORm sc-gqtqYm jriqyv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cfJLes cHTqvR"
    >
      : 
    </i>
    <span
      class="sc-cAiakp dqiesn"
    >
      <span
        class="sc-avgGE hhYORm sc-gqtqYm jriqyv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cfJLes cHTqvR"
    >
      : 
    </i>
    <span
      class="sc-cAiakp dqiesn"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-avgGE hhYORm sc-gqtqYm jriqyv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn eptHSR"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cfJLes cHTqvR"
    >
      : 
    </i>
    <span
      class="sc-cAiakp dqiesn"
    >
      Hey
       
      <span
        class="sc-avgGE hhYORm sc-gqtqYm jriqyv"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-kmQKqq bJTGzb"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cfJLes cHTqvR"
    >
      : 
    </i>
    <span
      class="sc-cAiakp dqiesn"
    >
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW lpjSeN"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW lpjSeN"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW lpjSeN"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-jibzWn hfLDmC"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-fotPuT jrxelZ sc-jCHTsB hLSvww"
      tabindex="0"
    >
      <span
        class="sc-bLdrIe gpxqjF"
      >
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-cfJLes cHTqvR"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-avgGE hhYORm sc-gsFBvc dCMuSE"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-kmQKqq bJTGzb"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-cfJLes cHTqvR"
    >
      : 
    </i>
    <span
      class="sc-cAiakp dqiesn"
    >
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW cmyewe"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW cmyewe"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW cmyewe"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW cmyewe"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW cmyewe"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW cmyewe"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW cmyewe"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW cmyewe"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW cmyewe"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW cmyewe"
        >
          😀
        </span>
      </div>
      <div
        class="sc-fotPuT jrxelZ sc-haThUj kQXZOa"
        tabindex="-1"
      >
        <span
          class="sc-kTqJeW cmyewe"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
